--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,8 @@
 /log/*.log
 /tmp
 
+# Ignore ruby versino files from rbenv
+.ruby-version
+
 # Ignore application configuration
 /config/application.yml
